--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson19</title>
+    <link rel="stylesheet" href="src/style.css">
 
     <script defer src="data.js"></script>
-    <script defer src="app.js"></script>
     <script defer src="main.js"></script>
 
 </head>
 <body>
     <h1>Homework 19 - Nia</h1>
-
-
     <button id="buttontoremove">ButtonHere</button>
+    <section id="forPic"></section>
+
+    <section id="products-list" class="productListSection"></section>
 </body>
 </html>
+
+
